Add annotation and generate documentation OpenAPI.
