# app/Http/Resources/BookingResource.php
@@ -2,6 +2,7 @@
 
 namespace App\Http\Resources;
 
+use Carbon\Carbon;
 use Illuminate\Http\Request;
 use Illuminate\Http\Resources\Json\JsonResource;
 
@@ -12,6 +13,7 @@ use Illuminate\Http\Resources\Json\JsonResource;
  * @property mixed $cost
  * @property mixed $token
  * @property mixed $freezingRoom
+ * @property mixed $id
  */
 class BookingResource extends JsonResource
 {
@@ -23,13 +25,22 @@ class BookingResource extends JsonResource
      */
     public function toArray($request): array
     {
+        $date = Carbon::parse($this->location->dateByTZ);
+        $storagePeriod = 0;
+
+        if ($date->timestamp < Carbon::parse($this->storage_period)->timestamp) {
+            $storagePeriod = $date->diffInDays($this->storage_period) + 1;
+        }
+
         return [
-            'location'      => $this->location->name,
-            'freezing_room' => new FreezingRoomSimpleResource($this->freezingRoom),
-            'blocks'        => $this->blocks,
-            'storage_up_to' => $this->storage_period,
-            'cost'          => $this->cost,
-            'token'         => $this->token,
+            'id'                 => $this->id,
+            'location_name'      => $this->location->name,
+            'freezing_room'      => new FreezingRoomSimpleResource($this->freezingRoom),
+            'blocks'             => $this->blocks,
+            'cost'               => $this->cost,
+            'storage_period'     => $storagePeriod,
+            'date_booking_by_tz' => $this->storage_period,
+            'token'              => $this->token,
         ];
     }
 }
